[package]
name = "noise_gui"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
eframe = { version = "0.24", default-features = false, features = [
    "accesskit", 
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.24"
egui-snarl = { git = "https://github.com/zakarumych/egui-snarl", features = ["serde"], rev = "dabe4a3" }
log = "0.4"
noise = "0.8"
ordered-float = "4.2"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
env_logger = "0.10"
rfd = "0.12"
ron = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[build-dependencies]
anyhow = "1.0"
lazy_static = "1.4"
rand = "0.8"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
