[package]
name = "noise_expr"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"

[dependencies]
noise = {workspace = true}
ordered-float = "4.2"
serde = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
env_logger = "0.10"
rfd = "0.12"
ron = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"