[package]
name = "noise_expr"
version = "0.1.1"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
description = "A graph serialization library for noise_gui"
license = "MIT OR Apache-2.0"

[dependencies]
noise = {workspace = true}
ordered-float = "4.2"
serde = {workspace = true}

[dev-dependencies]
ron = "0.8"
